# spiral

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
experiments/: sinks_test.py
scripts/: make_gif.py  make_marks.py  record_demo.py  smoke.py
spiral/: __init__.py  agent.py  appicon.py  artifact_gate.py  banner.py  builder_tools.py  chat.py  citations.py  cite_graph.py  cli.py  command_broker.py  conductor.py  config.py  dash.py  delivery.py  doctor.py  edits.py  epistemic.py  extras.py  footguns.py  keys.py  ledger.py  llm.py  numeric_lab.py  planner.py  product_audit.py  repomap.py  research.py  research_corpus.py  research_data.py  research_graph.py  research_history.py  research_loop.py  research_provenance.py  research_quality.py  research_refine.py  research_replication.py  research_strategy.py  research_ui.py  research_workbench.py  (+12 more)
spiral/skills/: android-kotlin.md  dark-ui-design.md  dependency-medic.md  design-principles.md
tests/: test_agent.py  test_appicon.py  test_builder_quality.py  test_edits.py  test_epistemic_kernel.py  test_footguns.py  test_gate_detect.py  test_planner.py  test_research_data.py  test_research_liveness.py  test_research_refine.py  test_research_stack.py  test_route.py  test_tools.py  test_verify_math.py  test_visual_review.py
