[project]
name = "spiral-coder"
version = "0.1.2"
description = "Local-first autonomous coding CLI — plans, builds, verifies, and validates against a spec, entirely on your own hardware."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Edis Devin Tireli" },
]
keywords = [
    "llm", "local-first", "autonomous-agent", "coding-agent", "ollama",
    "cli", "developer-tools", "code-generation", "on-device",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pillow>=10", "pytest>=8", "build>=1.2", "twine>=5", "pyte>=0.8"]

[project.urls]
Homepage = "https://github.com/edtireli/spiral"
Repository = "https://github.com/edtireli/spiral"
Issues = "https://github.com/edtireli/spiral/issues"

[project.scripts]
spiral = "spiral.cli:entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spiral"]
